[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "breathbridge"
version = "0.7.0"
description = "Integrates the Biqu Panda Breath with Home Assistant, Moonraker (faked), PrusaLink and PrusaSlicer gcode"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "websockets>=13.0",
    "aiomqtt>=2.0",
    "aiohttp>=3.9",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.scripts]
breathbridge = "breathbridge.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.hatch.build.targets.wheel]
packages = ["src/breathbridge"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
